--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -6,3 +6,37 @@ Journal = {Kalle Anka},
 Volume = {50},
 Pages = {9-19},
 Year = {2001} }
+
+@online{digitaleyechart,
+  author = {digitaleyechart.com},
+  title = {Digital Eye Chart},
+  year = 2015,
+  url = {http://digitaleyechart.com/},
+  urldate = {2015-04-27}
+}
+
+@online{ichartplus,
+  author = {iChartPlus},
+  title = {iChartPlus},
+  year = 2015,
+  url = {http://ichartplus.com/},
+  urldate = {2015-04-27}
+}
+
+@online{appletv,
+  author = {{Apple, Inc}},
+  title = {Apple TV},
+  year = 2015,
+  url = {https://www.apple.com/se/appletv/},
+  urldate = {2015-04-27}
+}
+
+@online{chromecast,
+  author = {{Google, Inc}},
+  title = {Chromecast},
+  year = 2015,
+  url = {https://www.google.se/chrome/devices/chromecast/},
+  urldate = {2015-04-27}
+}
+
+
