--- a/Project/Report/utkast till utkast till rapport.tex
+++ b/Project/Report/utkast till utkast till rapport.tex
@@ -17,12 +17,12 @@
 
 %%%%%%%%%%%%%%%%% Start document %%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-\title{Report Draft\\AxAnIvIs}
+\title{Report Draft\\Digitalization of Visual Acuity Testing}
 \author{Anders Ohlsson\\Christian Johansson\\Svante Nilsson}
 \maketitle
 
 \begin{abstract}
-AxAnIvIs is a project involving development of a method for displaying optician's eye charts. The charts are going to be displayed on a digital screen and controled via an Android tablet. This solves several problems relating to lighting and distance from the patient to the chart, while also providing more ways for the optician to tailor the examination of the patient. The AxAnIvIs project will be improving upon a proof-of-concept system that has been used to test whether or not digital screens are a viable alternative to physical charts.
+Digitalization of Visual Acuity Testing is a project involving development of a method for displaying optician's eye charts. The charts are going to be displayed on a digital screen and controled via an Android tablet. This solves several problems relating to lighting and distance from the patient to the chart, while also providing more ways for the optician to tailor the examination of the patient. The Digitalization of Visual Acuity Testing project will be improving upon a proof-of-concept system that has been used to test whether or not digital screens are a viable alternative to physical charts.
 \end{abstract}
 \thispagestyle{empty}
 \clearpage
@@ -47,13 +47,20 @@ For such charts to function as a basis for these standardized tests of visual ac
 There are also several different variations on these charts. Different sets of symbols, ranging from different subsets of latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen Chart that was developed in the 19th century, to the more modern LogMAR chart.
 
 \subsection{Related work}
-Several pieces of software exists that tries to solve the problems of the physical charts.
+Several pieces of software exists that tries to solve the problems of displaying information from an android tablet or phone on a larger screen.
+
+\subsubsection{Chromecast and Apple TV}
+The Chromecast \cite{chromecast} and Apple TV \cite{appletv} is small devices which is plugged in to a TV and enables mobile phones and tablets to stream media to it. The devices are small and easy to handle and a lot of applications support streaming to it. The Chromecast is specifically made for android devices and Apple TV for iOS device, but they both support each other.
+
 %(http://digitaleyechart.com/)
 \subsubsection{Digital Eye Chart}
- Digital Eye Chart is a program that attempts to solve the problem of having several charts by using a monitor instead. The user can then, with the help of a computer, change the symbols on the chart and even generate a random chart. 
+ Digital Eye Chart is a visual acuity testing program that attempts to solve the problem of having several charts by using a monitor instead. The user can then, with the help of a computer, change the symbols on the chart and even generate a random chart. \cite{digitaleyechart}
 %http://ichartplus.com/
 \subsubsection{iChart+}
-iChartPlus is another programs which is similar to Digital Eye Chart but also have an adjustable viewing distance.
+iChartPlus is another program which is similar to Digital Eye Chart but also have an adjustable viewing distance. \cite{ichartplus}
+
+\subsubsection{AxAnIvIs}
+AxAnIvIs is a prototype that is currently under testing at Uppsala University Hospital. The project attempts to improve the way we perform visual acuity tests by digitalizing it and add other kinds of charts than the standard physical ones that exists today.
 
 
 \section{Employer}
