Lagt till sektioner om varje del av systemet under Methods

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -7,6 +7,30 @@ Volume = {50},
 Pages = {9-19},
 Year = {2001} }
 
+@book{
+  Author = {Loy, M., Eckstein, R., Wood, D., Elliot, J., Cole, B.},
+  Title = {Java Swing},
+  Edition = {2nd Edition},
+  Publisher = {O'Reilly},
+  Year = {2003}
+}
+
+@online{
+JavaFX_8,
+  author = {Oracle},
+  title = {JavaFX: Getting Started with JavaFX},
+  year = {2014},
+  url = {https://docs.oracle.com/javase/8/javafx/get-started-tutorial/jfx-overview.htm},
+  urldate = {2015-04-28}
+}
+
+@online{Java_Swing,
+  author = {Amy Fowler},
+  title = {A Swing Architecture Overview},
+  url = {http://www.oracle.com/technetwork/java/architecture-142923.html},
+  urldate = {2015-04-28}
+}
+
 @online{digitaleyechart,
   author = {digitaleyechart.com},
   title = {Digital Eye Chart},
